# QtExample

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android_test/: CMakeLists.txt  Main.qml  main.cpp
app/: build.gradle.kts
app/src/androidTest/java/com/example/qtexample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/qtexample/: MainActivity.kt
app/src/main/java/com/example/qtexample/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/qtexample/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
